Update style.css issue #001. Fix nav buttons on mobile. Media query width 75px to 70px.

--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ ul.circle {
 
 @media only screen and (max-width: 768px) {
     .nav a {
-      width: 75px;
+      width: 70px;
       padding: 1px;
       font-size: 14px;
       text-shadow: 0px 0px 0 #bbbbbb;
